--- a/portfolio.html
+++ b/portfolio.html
@@ -84,13 +84,23 @@
           <ul class="list portfolio-list">
             <li class="portfolio-item">
               <a class="link portfolio-link" href="">
-                <img
-                  class="portfolio-img"
-                  src="./images/portfolio-img1.jpg"
-                  alt="Ноутбук с открытым веб-сайтом"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-container">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio-img1.jpg"
+                    alt="Ноутбук с открытым веб-сайтом"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-slider">
+                    <p class="slider-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-descript">
                   <h2 class="example-title">Технокряк</h2>
                   <p class="example-desc">Веб-сайт</p>
@@ -99,13 +109,23 @@
             </li>
             <li class="portfolio-item">
               <a class="link portfolio-link" href="">
-                <img
-                  class="portfolio-img"
-                  src="./images/portfolio-img2.jpg"
-                  alt="Два игрока баскетболиста борятся за мяч"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-container">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio-img2.jpg"
+                    alt="Два игрока баскетболиста борятся за мяч"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-slider">
+                    <p class="slider-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-descript">
                   <h2 class="example-title">
                     Постер New Orlean vs Golden Star
@@ -116,13 +136,23 @@
             </li>
             <li class="portfolio-item">
               <a class="link portfolio-link" href="">
-                <img
-                  class="portfolio-img"
-                  src=".//images/portfolio-img3.jpg "
-                  alt="Название ресторана на фоне рыбы"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-container">
+                  <img
+                    class="portfolio-img"
+                    src=".//images/portfolio-img3.jpg "
+                    alt="Название ресторана на фоне рыбы"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-slider">
+                    <p class="slider-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-descript">
                   <h2 class="example-title">Ресторан Seafood</h2>
                   <p class="example-desc">Приложение</p>
@@ -131,13 +161,23 @@
             </li>
             <li class="portfolio-item">
               <a class="link portfolio-link" href="">
-                <img
-                  class="portfolio-img"
-                  src="./images/portfolio-img4.jpg"
-                  alt="Беспроводные наушники"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-container">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio-img4.jpg"
+                    alt="Беспроводные наушники"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-slider">
+                    <p class="slider-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-descript">
                   <h2 class="example-title">Проект Prime</h2>
                   <p class="example-desc">Маркетинг</p>
@@ -146,13 +186,23 @@
             </li>
             <li class="portfolio-item">
               <a class="link portfolio-link" href="">
-                <img
-                  class="portfolio-img"
-                  src="./images/portfolio-img5.jpg"
-                  alt="Два коробка"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-container">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio-img5.jpg"
+                    alt="Два коробка"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-slider">
+                    <p class="slider-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-descript">
                   <h2 class="example-title">Проект Boxes</h2>
                   <p class="example-desc">Приложение</p>
@@ -161,13 +211,23 @@
             </li>
             <li class="portfolio-item">
               <a class="link portfolio-link" href="">
-                <img
-                  class="portfolio-img"
-                  src="./images/portfolio-img6.jpg"
-                  alt="Монитор с открытым веб-сайтом"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-container">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio-img6.jpg"
+                    alt="Монитор с открытым веб-сайтом"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-slider">
+                    <p class="slider-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-descript">
                   <h2 class="example-title">Inspiration has no Borders</h2>
                   <p class="example-desc">Веб-сайт</p>
@@ -176,13 +236,23 @@
             </li>
             <li class="portfolio-item">
               <a class="link portfolio-link" href="">
-                <img
-                  class="portfolio-img"
-                  src="./images/portfolio-img7.jpg"
-                  alt="Развернутый женский журнал"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-container">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio-img7.jpg"
+                    alt="Развернутый женский журнал"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-slider">
+                    <p class="slider-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-descript">
                   <h2 class="example-title">Издание Limited Edition</h2>
                   <p class="example-desc">Дизайн</p>
@@ -191,13 +261,23 @@
             </li>
             <li class="portfolio-item">
               <a class="link portfolio-link" href="">
-                <img
-                  class="portfolio-img"
-                  src="./images/portfolio-img8.jpg"
-                  alt="Бумажная бирка с логотипом"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-container">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio-img8.jpg"
+                    alt="Бумажная бирка с логотипом"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-slider">
+                    <p class="slider-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-descript">
                   <h2 class="example-title">Проект LAB</h2>
                   <p class="example-desc">Маркетинг</p>
@@ -206,13 +286,23 @@
             </li>
             <li class="portfolio-item">
               <a class="link portfolio-link" href="">
-                <img
-                  class="portfolio-img"
-                  src="./images/portfolio-img9.jpg"
-                  alt="Человек за ноутбуком с открытым приложением"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-container">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio-img9.jpg"
+                    alt="Человек за ноутбуком с открытым приложением"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-slider">
+                    <p class="slider-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-descript">
                   <h2 class="example-title">Growing Business</h2>
                   <p class="example-desc">Приложение</p>
