--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
             Эффективные решения<br />
             для вашего бизнеса
           </h1>
-          <button class="banner-button" type="button">Заказать услугу</button>
+          <button class="banner-button" data-modal-open="" type="button">
+            Заказать услугу
+          </button>
         </div>
       </section>
       <section class="techology">
@@ -136,6 +138,9 @@
                 width="370"
                 height="294"
               />
+              <div class="item-overlay">
+                <p class="overlay-text">Десктопні додатки</p>
+              </div>
             </li>
             <li class="works-item">
               <img
@@ -145,6 +150,9 @@
                 width="370"
                 height="294"
               />
+              <div class="item-overlay">
+                <p class="overlay-text">Мобільні додатки</p>
+              </div>
             </li>
             <li class="works-item">
               <img
@@ -154,6 +162,9 @@
                 width="370"
                 height="294"
               />
+              <div class="item-overlay">
+                <p class="overlay-text">Дизайнерські рішення</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -444,5 +455,13 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button data-modal-close aria-label="button" class="close-button">
+          <img class="icon-close" src="./images/close.svg" alt="Закрити" />
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
